--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <title>JUNKDROP Admin Login</title>
+  <title>JUNKDROP Admin Sign Up & Sign In</title>
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <style>
     html, body {
@@ -15,21 +15,30 @@
       align-items: center;
     }
 
-    .login-box {
+    .auth-box {
       background-color: #007BFF;
       padding: 2rem;
       border-radius: 10px;
       box-shadow: 0 2px 10px rgba(0,0,0,0.2);
       text-align: center;
       color: white;
-      width: 320px;
+      width: 340px;
     }
 
-    .login-box h2 {
+    .auth-box h2 {
       margin-bottom: 20px;
     }
 
-    .login-box button {
+    .auth-box input {
+      width: 100%;
+      padding: 12px;
+      margin-bottom: 15px;
+      border: none;
+      border-radius: 5px;
+      font-size: 16px;
+    }
+
+    .auth-box button {
       background-color: white;
       color: #007BFF;
       border: none;
@@ -39,28 +48,40 @@
       cursor: pointer;
       transition: background 0.3s ease;
       width: 100%;
+      margin-bottom: 10px;
     }
 
-    .login-box button:hover {
+    .auth-box button:hover {
       background-color: #e0e0e0;
+    }
+
+    .toggle-link {
+      color: white;
+      cursor: pointer;
+      text-decoration: underline;
+      font-size: 14px;
     }
   </style>
 </head>
 <body>
 
-  <div class="login-box">
-    <h2>Admin Login</h2>
-    <button id="login-btn">Login as Admin</button>
+  <div class="auth-box">
+    <h2 id="form-title">Admin Sign In</h2>
+    <input type="email" id="email" placeholder="Admin Email" required />
+    <input type="password" id="password" placeholder="Password" required />
+    <button id="auth-btn">Sign In</button>
+    <div class="toggle-link" id="toggle-link">Don't have an account? Sign Up</div>
   </div>
 
-  <!-- Firebase v10.12.0 SDK modules -->
   <script type="module">
     import { initializeApp } from "https://www.gstatic.com/firebasejs/10.12.0/firebase-app.js";
     import {
       getAuth,
-      signInAnonymously,
+      signInWithEmailAndPassword,
+      createUserWithEmailAndPassword,
       setPersistence,
-      browserLocalPersistence
+      browserLocalPersistence,
+      signOut
     } from "https://www.gstatic.com/firebasejs/10.12.0/firebase-auth.js";
 
     const firebaseConfig = {
@@ -76,38 +97,61 @@
     const app = initializeApp(firebaseConfig);
     const auth = getAuth(app);
 
-    // Ensure persistent auth state
+    // Keep session across refreshes
     setPersistence(auth, browserLocalPersistence).catch(console.error);
 
-    // ✅ Updated Admin UID
-    const ADMIN_UID = "EoezWLVeNKPbWoNQQkYA7g6tlvx1";
+    const ADMIN_UID = "YUcNk6jJBLQWCbVph94FdFFStOE2";
 
-    document.getElementById('login-btn').addEventListener('click', async () => {
+    let isSignUp = false;
+
+    const formTitle = document.getElementById('form-title');
+    const authBtn = document.getElementById('auth-btn');
+    const toggleLink = document.getElementById('toggle-link');
+
+    toggleLink.addEventListener('click', () => {
+      isSignUp = !isSignUp;
+      formTitle.textContent = isSignUp ? "Admin Sign Up" : "Admin Sign In";
+      authBtn.textContent = isSignUp ? "Sign Up" : "Sign In";
+      toggleLink.textContent = isSignUp ? "Already have an account? Sign In" : "Don't have an account? Sign Up";
+    });
+
+    authBtn.addEventListener('click', async () => {
+      const email = document.getElementById('email').value;
+      const password = document.getElementById('password').value;
+
+      if (!email || !password) {
+        alert("Please fill in both fields.");
+        return;
+      }
+
       try {
-        let user = auth.currentUser;
-
-        if (!user) {
-          const userCredential = await signInAnonymously(auth);
-          user = userCredential.user;
-        }
-
-        const uid = user.uid;
-        console.log("Anonymous UID:", uid);
-
-        if (uid === ADMIN_UID) {
-          alert("Login successful! Redirecting to dashboard...");
-          window.location.href = "admin-dashboard.html";
+        let userCredential;
+        if (isSignUp) {
+          userCredential = await createUserWithEmailAndPassword(auth, email, password);
+          alert("Sign up successful! You can now sign in.");
+          isSignUp = false;
+          formTitle.textContent = "Admin Sign In";
+          authBtn.textContent = "Sign In";
+          toggleLink.textContent = "Don't have an account? Sign Up";
         } else {
-          alert("Access denied: You are not authorized.");
-        }
+          userCredential = await signInWithEmailAndPassword(auth, email, password);
+          const user = userCredential.user;
 
+          // ✅ Check if user is admin
+          if (user.uid === ADMIN_UID) {
+            alert("Sign in successful! Redirecting to dashboard...");
+            window.location.href = "admin-dashboard.html";
+          } else {
+            alert("Access Denied: You are not authorized to access the dashboard.");
+            await signOut(auth);
+          }
+        }
       } catch (error) {
-        console.error("Authentication failed:", error);
-        alert("Login failed. Check console for details.");
+        console.error("Auth error:", error);
+        alert("Error: " + error.message);
       }
     });
   </script>
 
 </body>
 </html>
-
